--- a/autoprodtool/.settings/org.eclipse.jdt.core.prefs
+++ b/autoprodtool/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Wed Feb 04 10:15:25 CST 2015
+#Wed Feb 04 17:44:21 CST 2015
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
@@ -9,4 +9,5 @@ org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.debug.sourceFile=generate
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
 org.eclipse.jdt.core.compiler.source=1.6
