--- a/autoprodtool/pom.xml
+++ b/autoprodtool/pom.xml
@@ -158,6 +158,12 @@
 			<artifactId>tiles-jsp</artifactId>
 			<version>3.0.1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
