--- a/autoprodtool/src/main/webapp/WEB-INF/conf/application.properties
+++ b/autoprodtool/src/main/webapp/WEB-INF/conf/application.properties
@@ -4,21 +4,21 @@ basePackagePath=com/study/autoprodtool
 uploadMaxSizeMB=2
 
 #DB settings
-#db.jdbc.driverClassName=org.postgresql.Driver
-#db.jdbc.url=jdbc:postgresql://localhost:5432/mydb
-#db.jdbc.username=postgres
-#db.jdbc.password=p0stgresu5er
-#hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+db.jdbc.driverClassName=org.postgresql.Driver
+db.jdbc.url=jdbc:postgresql://localhost:5432/autoprodtool
+db.jdbc.username=admin
+db.jdbc.password=123456
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #db.jdbc.driverClassName=com.mysql.jdbc.Driver
 #db.jdbc.url=jdbc:mysql://localhost:3306/test
 #db.jdbc.username=root
 #db.jdbc.password=123456
 #hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-db.jdbc.driverClassName=com.mysql.jdbc.Driver
-db.jdbc.url=jdbc:mysql://sqld.duapp.com:4050/wfuiVqvmBXGELztGdHTL
-db.jdbc.username=g1iUk14enNjI9BD7zlk1XdIj
-db.jdbc.password=WGatVjoR5fBBUzGMcIoxiL81sffgLjqE
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#db.jdbc.driverClassName=com.mysql.jdbc.Driver
+#db.jdbc.url=jdbc:mysql://sqld.duapp.com:4050/wfuiVqvmBXGELztGdHTL
+#db.jdbc.username=g1iUk14enNjI9BD7zlk1XdIj
+#db.jdbc.password=WGatVjoR5fBBUzGMcIoxiL81sffgLjqE
+#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 
