do some implementation and add the spect doc.

--- a/autoprodtool/src/main/webapp/WEB-INF/conf/application.properties
+++ b/autoprodtool/src/main/webapp/WEB-INF/conf/application.properties
@@ -2,6 +2,7 @@
 basePackage=com.study.autoprodtool
 basePackagePath=com/study/autoprodtool
 uploadMaxSizeMB=2
+pageLimit=10
 
 #DB settings
 db.jdbc.driverClassName=org.postgresql.Driver
