--- a/autoprodtool/.settings/org.eclipse.core.resources.prefs
+++ b/autoprodtool/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Feb 04 14:52:25 CST 2015
+#Wed Feb 11 15:51:00 CST 2015
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/nav.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/user/update.jsp=UTF-8
