--- a/exceldemo/pom.xml
+++ b/exceldemo/pom.xml
@@ -12,6 +12,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>my.study</groupId>
+			<artifactId>jsontool</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.11-beta1</version>
@@ -34,6 +40,17 @@
 			<artifactId>velocity</artifactId>
 			<version>1.7</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.8.3</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.27</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -42,15 +59,15 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
+<!-- 				<configuration> -->
+<!-- 					<archive> -->
+<!-- 						<manifest> -->
+<!-- 							<addClasspath>true</addClasspath> -->
 <!-- 							<classpathPrefix>lib</classpathPrefix> -->
-							<mainClass>my.study.exceldemo.Main</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
+<!-- 							<mainClass>my.study.exceldemo.read.ReadMain</mainClass> -->
+<!-- 						</manifest> -->
+<!-- 					</archive> -->
+<!-- 				</configuration> -->
 			</plugin>
 			
 			<plugin>
