--- a/springdemos/AnnoServlet3SimpleDemo/spstudy/.classpath
+++ b/springdemos/AnnoServlet3SimpleDemo/spstudy/.classpath
@@ -17,11 +17,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -33,5 +28,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Users/bricks.mong/Downloads/vsp-5.4.7.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
