del mogo related files

--- a/simplemybatis/src/main/resources/log4j.properties
+++ b/simplemybatis/src/main/resources/log4j.properties
@@ -31,6 +31,6 @@ log4j.appender.console.layout.ConversionPattern = %p %.20t %d{yyyy-MM-dd HH\:mm\
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.DatePattern='_'yyyy-MM-dd-a'.log'
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.File=/data/mogologs/mogoroom-papp.log
+log4j.appender.file.File=/data/logs/papp.log
 log4j.appender.file.layout.ConversionPattern=%p %t %d{yyyy-MM-dd HH\:mm\:ss.SSS} %C.%M(%L) | %m %n
 
