--- a/springdemos/AnnoServlet3SimpleDemo/spstudy/pom.xml
+++ b/springdemos/AnnoServlet3SimpleDemo/spstudy/pom.xml
@@ -98,6 +98,13 @@
 		    <version>1.1.2</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.46</version>
+		</dependency>
+		
 
 	</dependencies>
 
